# jump

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_zh.md
.serena/: project.yml
ccd/: Cargo.toml  README.md
ccd/shell/: ccd.sh  j.sh
ccd/src/: config.rs  main.rs
ccd/src/commands/: add.rs  edit.rs  hist.rs  interactive.rs  jump.rs  list.rs  mod.rs  recent.rs  rm.rs
ccd/src/core/: jumper.rs  matcher.rs  mod.rs  storage.rs
docs/superpowers/plans/: 2026-03-24-ccd-implementation-plan.md
docs/superpowers/specs/: 2026-03-24-ccd-directory-jumper-design.md
jump/: .gitignore  README.md
jump/src/: config.rs
jump/src/commands/: edit.rs  jump.rs  mod.rs  rm.rs
jump/src/core/: mod.rs
shell/: j.sh
src/: config.rs  main.rs
src/commands/: hist.rs  interactive.rs  jump.rs  mod.rs  project.rs  recent.rs
src/core/: jumper.rs  matcher.rs  storage.rs
