[package]
name = "ccd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "j"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
